# HalfLife

./: .gitignore  COLAB.md  Dockerfile  PLAN.md  README.md  TESTING.md  decay_mlp.npz  docker-compose.yml  launch_digest.txt  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
api/: main.py
demo/: HalfLife_RealWorld_Demo.ipynb  rag_halflife.py  requirements.txt
docs/: README.md  architecture.md  benchmarking.md  middleware-usage.md  query-intents.md
engine/classifier/: doc_type.py  query_intent.py
engine/decay/: base.py  exponential.py  learned.py  learned_model.py  piecewise.py  registry.py
engine/events/: bus.py
engine/feedback/: updater.py
engine/fusion/: consistency.py  reranker.py
engine/ingestion/: pipeline.py
engine/store/: redis_store.py
engine/temporal/: extractor.py
examples/: evolution_demo.py  killer_react_demo.py  llamaindex_halflife_demo.py  software_docs_demo.py
halflife/: __init__.py  engine.py
halflife/integrations/: langchain.py  llamaindex.py
scripts/: benchmark.py  cli.py  corpus.py  data_loader.py  demo.py  evaluate.py  generate_benchmark_data.py  quickstart.py  run_benchmark.py  temporal_qa.json  train_mlp.py  try_on_your_data.py  visualize_decay.py
templates/docs_qa_bot/: index.html  integration.py
templates/enterprise_api/: server.py
templates/research_assistant/: research_assistant.py
tests/: test_benchmark.py  test_decay.py
