[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "halflife-rag"
version = "0.1.0"
description = "Temporal-aware re-ranking engine for RAG"
authors = [
    { name = "Amay Dixit", email = "[EMAIL_ADDRESS]" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "redis",
    "qdrant-client",
    "numpy",
    "scipy",
    "sentence-transformers",
    "pydantic",
    "python-dotenv"
]
requires-python = ">=3.10"

[project.scripts]
halflife = "scripts.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "api*", "scripts*"]
